# todolist

./: LICENSE  docker-compose.yml
todoapi/: .env.example  Cargo.toml  Dockerfile  entrypoint.sh
todoapi/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
todoapi/src/: actions.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
