[package]
name = "todoapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "serde_json"] }
r2d2 = "0.8.10"
dotenv = { version = "0.15.0", optional = true }

[features]
dev = ["dotenv"]

[profile.release]
opt-level = 3
lto = true
rpath = false
debug = false
